--- a/COBA/Views/Main/Emails.cshtml
+++ b/COBA/Views/Main/Emails.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="whitebg" style="height:500px;overflow:scroll">
     <!-- BEGIN PAGE BREADCRUMBS -->
-    <div ng-app="reportApp" ng-controller="EmailController">
+    <div ng-controller="EmailController">
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
