--- a/COBA/Views/Main/MapTask.cshtml
+++ b/COBA/Views/Main/MapTask.cshtml
@@ -1,5 +1,5 @@
 ﻿<!-- BEGIN PAGE BREADCRUMBS -->
-<div ng-app="reportApp" ng-controller="MapTaskController" class="whitebg">
+<div ng-controller="MapTaskController" class="whitebg">
 
     <div class="modal fade" id="currencyModel" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog" style="width:75%;margin-top:10%;">
