--- a/COBA/Views/Main/Tasks.cshtml
+++ b/COBA/Views/Main/Tasks.cshtml
@@ -1,5 +1,5 @@
 ﻿<!-- BEGIN PAGE BREADCRUMBS -->
-<div ng-app="reportApp" ng-controller="TaskController" class="whitebg">
+<div  ng-controller="TaskController" class="whitebg">
 
     <section class="content-header" style="padding-bottom:10px;">
         <h1>Change  Management</h1>
