--- a/COBA/Views/Shared/_Layout.cshtml
+++ b/COBA/Views/Shared/_Layout.cshtml
@@ -144,27 +144,23 @@
                     <li class='@Html.IsActive("Main", "Index")' aria-haspopup="true">
                         <a href="Index"><i class="fa fa-circle-o"></i> 
                             Dashboard
-                            <span class="arrow"></span>
                         </a>
                     </li>
                     <li class='@Html.IsActive("Main", "Strategy")'>
                         <a href="Strategy">
                             <i class="fa fa-circle-o"></i>    Strategy
-                            <span class="arrow"></span>
                         </a>
                     </li>
 
                     <li class='@Html.IsActive("Main", "Tasks")'>
                         <a href="Tasks"><i class="fa fa-circle-o"></i> 
-                            Tasks
-                            <span class="arrow"></span>
+                            Change Management
                         </a>
                     </li>
 
                     <li class='@Html.IsActive("Main", "MapTask")'>
                         <a href="MapTask"><i class="fa fa-circle-o"></i> 
-                            Map Task
-                            <span class="arrow"></span>
+                            Map Strategy
                         </a>
                     </li>
                     @*<li class='@Html.IsActive("Main", "OnBoardingTasks")'>
@@ -175,22 +171,21 @@
                     </li>*@
                     <li class='@Html.IsActive("Main", "Emails")'>
                         <a href="Emails">
-                            Emails
-                            <span class="arrow"></span>
+                            <i class="fa fa-circle-o"></i> 
+                             Emails
+                            
                         </a>
                     </li>
 
                     <li class='@Html.IsActive("Main", "Reports")' aria-haspopup="true">
-                        <a href="javascript:;">
+                        <a href="Reports"><i class="fa fa-circle-o"></i> 
                             Reports
-                            <span class="arrow"></span>
                         </a>
                     </li>
 
                     <li class='@Html.IsActive("Main", "Licensing")' aria-haspopup="true">
-                        <a href="javascript:;">
+                        <a href="Licensing"><i class="fa fa-circle-o"></i> 
                             <i class="icon-briefcase"></i> Licensing
-                            <span class="arrow"></span>
                         </a>
 
                     </li>
