--- a/COBA/Views/Main/OnBoardingTasks.cshtml
+++ b/COBA/Views/Main/OnBoardingTasks.cshtml
@@ -1,5 +1,5 @@
 ﻿<!-- BEGIN PAGE BREADCRUMBS -->
-<div ng-app="reportApp" ng-controller="OnboardingTaskController">
+<div ng-controller="OnboardingTaskController">
 
 
     <div class="modal fade" id="currencyModel" tabindex="-1" role="dialog" aria-hidden="true">
