--- a/COBA/Views/Main/Strategy.cshtml
+++ b/COBA/Views/Main/Strategy.cshtml
@@ -38,12 +38,12 @@
                                         <div class="col-sm-offset-4 col-sm-10">
 
                                             <span data-ng-hide="editMode">
-                                                <input type="button" value="Add" ng-click="InsertStrategy(currency)" class="btn btn-outline-info" />
-                                            </span>
+                                                <input type="button" value="Add" ng-click="InsertStrategy(currency)" class="btn  btn-circle btn-default btn-outline-info"  />
+                                            </span>&nbsp;
                                             <span data-ng-show="editMode">
-                                                <input type="button" value="Update" ng-click="UpdateStrategy(ecurrency)" class="btn btn-outline-info" />
-                                            </span>
-                                            <input type="button" value="Cancel" ng-click="cancel()" class="btn btn-sm btn-circle btn-default" />
+                                                <input type="button" value="Update" ng-click="UpdateStrategy(ecurrency)" class="btn  btn-circle btn-default btn-outline-info"  />
+                                            </span>&nbsp;
+                                            <input type="button" value="Cancel" ng-click="cancel()" class="btn  btn-circle btn-default btn-outline-info"  />
                                         </div>
                                     </div>
 
