--- a/COBA/Views/Shared/_Layout.cshtml
+++ b/COBA/Views/Shared/_Layout.cshtml
@@ -46,32 +46,12 @@
                                 <li>
                                     <!-- inner menu: contains the actual data -->
                                     <ul class="menu">
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-users text-aqua"></i> 5 new members joined today
+                                        <li ng-repeat="n in notificationdata">
+                                            <a ng-click="GetCurrencyConversionForId(n.RefNumber,N.Version)" href="#">
+                                                <i class="fa fa-users text-aqua"></i> RefNumber {{n.RefNumber}} Version {{n.Version}} 
                                             </a>
                                         </li>
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-warning text-yellow"></i> Very long description here that may not fit into the
-                                                page and may cause design problems
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-users text-red"></i> 5 new members joined
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-shopping-cart text-green"></i> 25 sales made
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-user text-red"></i> You changed your username
-                                            </a>
-                                        </li>
+                                        
                                     </ul>
                                 </li>
                                 <li class="footer"><a href="#">View all</a></li>
@@ -92,21 +72,6 @@
                                     <p>
                                         @Convert.ToString(Session["UserName"]) - Web Developer
                                     </p>
-                                </li>
-                                <!-- Menu Body -->
-                                <li class="user-body">
-                                    <div class="row">
-                                        <div class="col-xs-4 text-center">
-                                            <a href="#">Followers</a>
-                                        </div>
-                                        <div class="col-xs-4 text-center">
-                                            <a href="#">Sales</a>
-                                        </div>
-                                        <div class="col-xs-4 text-center">
-                                            <a href="#">Friends</a>
-                                        </div>
-                                    </div>
-                                    <!-- /.row -->
                                 </li>
                                 <!-- Menu Footer-->
                                 <li class="user-footer">
@@ -148,7 +113,7 @@
                     </li>
                     <li class='@Html.IsActive("Main", "Strategy")'>
                         <a href="Strategy">
-                            <i class="fa fa-circle-o"></i>    Strategy
+                            <i class="fa fa-circle-o"></i>    Application
                         </a>
                     </li>
 
@@ -196,6 +161,51 @@
             <div class="container">
                 <section class="content">
                     @RenderBody()
+
+                    <div class="modal fade" id="LayoutModel" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false" aria-hidden="true">
+                        <div class="modal-dialog" style="width:75%">
+                            <div class="modal-content">
+                                <div class="modal-header content-header">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">×</span>
+                                    </button>
+                                    <h4 class="modal-title" id="myModalLabel" style="margin-left:40%;">Application Approval Status</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <div>
+
+                                        <div class="row">
+                                            <div class="box-body">
+                                                <div class="row">
+                                                    
+                                                    <div ng-include="'ShowApprovalDetails'"></div>
+
+                                                    <div class="form-group col-lg-12">
+                                                        <div class="col-sm-offset-4 col-sm-10">
+
+                                                            <span data-ng-hide="editMode">
+                                                                <input type="button" value="Add" ng-click="InsertStrategy(currency)" class="btn  btn-circle btn-default btn-outline-info" />
+                                                            </span>&nbsp;
+                                                            <span data-ng-show="editMode">
+                                                                <input type="button" value="Update" ng-click="UpdateStrategy(ecurrency)" class="btn  btn-circle btn-default btn-outline-info" />
+                                                            </span>&nbsp;
+                                                            <input type="button" value="Cancel" ng-click="cancel()" class="btn  btn-circle btn-default btn-outline-info" />
+                                                        </div>
+                                                    </div>
+
+                                                    <div class="form-group">
+                                                        <label class="col-sm-6 col-sm-offset-2 control-label label-danger" ng-show="errorinfo.length > 0">{{errorinfo}}</label>
+                                                    </div>
+
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </section>
             </div>
         </div>
