--- a/COBA/Views/Shared/_Layout.cshtml
+++ b/COBA/Views/Shared/_Layout.cshtml
@@ -39,22 +39,22 @@
                         <li class="dropdown notifications-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-bell-o"></i>
-                                <span class="label label-warning">10</span>
+                                <span class="label label-warning">{{notificationdata.length}}</span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li class="header">You have 10 notifications</li>
+                                <li class="header">You have {{notificationdata.length}} notifications</li>
                                 <li>
                                     <!-- inner menu: contains the actual data -->
                                     <ul class="menu">
                                         <li ng-repeat="n in notificationdata">
-                                            <a ng-click="GetCurrencyConversionForId(n.RefNumber,N.Version)" href="#">
+                                            <a ng-click="GetCurrencyConversionForId(n.RefNumber,N.Version,N.Comments,N.ApprovedDate,N.Status)" href="#">
                                                 <i class="fa fa-users text-aqua"></i> RefNumber {{n.RefNumber}} Version {{n.Version}} 
                                             </a>
                                         </li>
                                         
                                     </ul>
                                 </li>
-                                <li class="footer"><a href="#">View all</a></li>
+                                <li class="footer"><a href="Approvals">View all</a></li>
                             </ul>
                         </li>
                         <!-- Tasks: style can be found in dropdown.less -->
@@ -183,13 +183,11 @@
                                                     <div class="form-group col-lg-12">
                                                         <div class="col-sm-offset-4 col-sm-10">
 
-                                                            <span data-ng-hide="editMode">
-                                                                <input type="button" value="Add" ng-click="InsertStrategy(currency)" class="btn  btn-circle btn-default btn-outline-info" />
-                                                            </span>&nbsp;
-                                                            <span data-ng-show="editMode">
-                                                                <input type="button" value="Update" ng-click="UpdateStrategy(ecurrency)" class="btn  btn-circle btn-default btn-outline-info" />
-                                                            </span>&nbsp;
-                                                            <input type="button" value="Cancel" ng-click="cancel()" class="btn  btn-circle btn-default btn-outline-info" />
+                                                            
+                                                                <input type="button" value="Update" ng-click="Update(currency)" class="btn  btn-circle btn-default btn-outline-info" />
+                                                            &nbsp;
+                                                            
+                                                            <input type="button" value="Cancel" ng-click="layoutcancel()" class="btn  btn-circle btn-default btn-outline-info" />
                                                         </div>
                                                     </div>
 
