--- a/COBA/Views/Main/Approvals.cshtml
+++ b/COBA/Views/Main/Approvals.cshtml
@@ -33,11 +33,9 @@
                                     <div class="form-group col-lg-12">
                                         <div class="col-sm-offset-4 col-sm-10">
 
-                                            <span data-ng-hide="editMode">
-                                                <input type="button" value="Add" ng-click="InsertStrategy(currency)" class="btn  btn-circle btn-default btn-outline-info" />
-                                            </span>&nbsp;
-                                            <span data-ng-show="editMode">
-                                                <input type="button" value="Update" ng-click="UpdateStrategy(ecurrency)" class="btn  btn-circle btn-default btn-outline-info" />
+                                            &nbsp;
+                                            <span>
+                                                <input type="button" value="Update" ng-click="UpdatecurrencyConversion(currency)" class="btn  btn-circle btn-default btn-outline-info" />
                                             </span>&nbsp;
                                             <input type="button" value="Cancel" ng-click="cancel()" class="btn  btn-circle btn-default btn-outline-info" />
                                         </div>
@@ -56,6 +54,57 @@
             </div>
         </div>
     </div>
+
+
+    <div class="modal fade" id="currencyModel1" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false" aria-hidden="true">
+        <div class="modal-dialog" style="width:75%">
+            <div class="modal-content">
+                <div class="modal-header content-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                    <h4 class="modal-title" id="myModalLabel" style="margin-left:40%;">Application Approval Status</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="">
+                        @*content*@
+                        <div class="row">
+                            <div class="box-body">
+                                <div class="table-responsive">
+                                    <table class="table no-margin">
+                                        <thead>
+                                            <tr>
+                                                <th>RefNumber</th>
+                                                <th>Approver</th>
+                                                <th>Status</th>
+                                                <th>Comments</th>
+                                                <th>ApprovedDate </th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr ng-repeat="right in ViewData">
+                                                <td><a href="pages/examples/invoice.html">{{right.RefNumber }}</a></td>
+                                                <td>{{right.Approver}}</td>
+                                                <td><span class="label label-success">{{right.Status}}</span></td>
+                                                <td>
+                                                    {{right.Comments}}
+                                                </td>
+                                                <td>
+                                                    {{right.ApprovedDate}}
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 
     <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog" style="width:25%">
