--- a/COBA/Views/Shared/_Layout.cshtml
+++ b/COBA/Views/Shared/_Layout.cshtml
@@ -9,13 +9,13 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
 
     <link href="~/plugins/bootstrap-datetimepicker.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="//cdn.rawgit.com/angular-ui/bower-ui-grid/v3.0.6/ui-grid.min.css" type="text/css" />
+    <link href="~/Assert/ui-grid.min.css" rel="stylesheet" />
+    @*<link rel="stylesheet" href="//cdn.rawgit.com/angular-ui/bower-ui-grid/v3.0.6/ui-grid.min.css" type="text/css" />*@
     <link rel="stylesheet" href="~/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/bower_components/Ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="~/dist/css/AdminLTE.min.css">
     <link rel="stylesheet" href="~/dist/css/skins/_all-skins.min.css">
-
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 
 </head>
@@ -209,6 +209,7 @@
         </div>
         <footer class="main-footer">
             <div class="container">
+                
                 <div class="pull-right hidden-xs">
                     <b>Version</b> 1.0.0
                 </div>
@@ -218,18 +219,23 @@
         </footer>
     </div>
     <script src="~/plugins/moment.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="~/Assert/Jquery-1.11.0.min.js"></script>
+    <script src="~/Assert/bootstrap.min.js"></script>
+
+    @*<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>*@
+    @*<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>*@
     <script src="~/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
     <script src="~/bower_components/fastclick/lib/fastclick.js"></script>
     <script src="~/dist/js/adminlte.min.js"></script>
     <script src="~/dist/js/demo.js"></script>
 
-
     <script src="~/plugins/bootstrap-datetimepicker.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
-    <script data-require="ui-bootstrap@0.12.1" data-semver="0.12.1" src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.1.min.js"></script>
-    <script src="//cdn.rawgit.com/angular-ui/bower-ui-grid/v3.0.6/ui-grid.min.js"></script>
+    <script src="~/Assert/angular.js"></script>
+    @*<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>*@
+    @*<script data-require="ui-bootstrap@0.12.1" data-semver="0.12.1" src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.1.min.js"></script>*@
+    <script src="~/Assert/ui-bootstrap-tpls-0.12.1.min.js"></script>
+    <script src="~/Assert/ui-grid.js"></script>
+    @*<script src="//cdn.rawgit.com/angular-ui/bower-ui-grid/v3.0.6/ui-grid.min.js"></script>*@
 
     <script type="text/javascript" src="~/plugins/ng-file-upload/dist/ng-file-upload.min.js"></script>
     <script type="text/javascript" src="~/plugins/ng-file-upload/dist/ng-file-upload-shim.min.js"></script>
