user role changes

--- a/COBA/Views/Shared/_Layout.cshtml
+++ b/COBA/Views/Shared/_Layout.cshtml
@@ -148,6 +148,18 @@
                             <i class="icon-briefcase"></i><span> Licensing</span>
                         </a>
                     </li>
+                    <li class='@Html.IsActive("Main", "UserManagement")' aria-haspopup="true">
+                        <a href="UserManagement">
+                            <i class="fa fa-circle-o"></i>
+                            <i class="icon-briefcase"></i><span> User Management</span>
+                        </a>
+                    </li>
+                    <li class='@Html.IsActive("Main", "RoleManagement")' aria-haspopup="true">
+                        <a href="RoleManagement">
+                            <i class="fa fa-circle-o"></i>
+                            <i class="icon-briefcase"></i><span> Role Management</span>
+                        </a>
+                    </li>
                     <li class="treeview menu-open">
                         <a href="#">
                             <i class="fa fa-files-o"></i>
@@ -157,13 +169,13 @@
                             </span>
                         </a>
                         <ul class="treeview-menu" style="display: block;">
-                            <li><a href="pages/layout/top-nav.html"><i class="fa fa-circle-o"></i> Country</a></li>
-                            <li><a href="pages/layout/boxed.html"><i class="fa fa-circle-o"></i> Region</a></li>
-                            <li><a href="pages/layout/fixed.html"><i class="fa fa-circle-o"></i> Business Sector</a></li>
-                            <li><a href="pages/layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Application Name</a></li>
-                            <li><a href="pages/layout/fixed.html"><i class="fa fa-circle-o"></i> Application ID</a></li>
-                            <li><a href="pages/layout/fixed.html"><i class="fa fa-circle-o"></i> Business Sector</a></li>
-                            <li><a href="pages/layout/fixed.html"><i class="fa fa-circle-o"></i> Product Type</a></li>
+                            <li><a href="Country"><i class="fa fa-circle-o"></i> Country</a></li>
+                            <li><a href="Region"><i class="fa fa-circle-o"></i> Region</a></li>
+                            <li><a href="BusinessSector"><i class="fa fa-circle-o"></i> Business Sector</a></li>
+                            <li><a href="ApplicationName"><i class="fa fa-circle-o"></i> Application Name</a></li>
+                            <li><a href="Application"><i class="fa fa-circle-o"></i> Application ID</a></li>
+                            <li><a href="BusinessSector"><i class="fa fa-circle-o"></i> Business Sector</a></li>
+                            <li><a href="ProductType"><i class="fa fa-circle-o"></i> Product Type</a></li>
                         </ul>
                     </li>
 
